[package]
name = "dolly"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Composable camera rigs"
repository = "https://github.com/h3r2tic/dolly"
documentation = "https://docs.rs/dolly"
keywords = ["gamedev", "camera", "3d"]
categories = ["game-development"]
readme = "crates-io.md"

[dependencies]
#glam = ">=0.15, <=0.20"
bevy = {git = "https://github.com/paxsethorld/bevy-fork.git", branch = "local-0-8-release", default-features = false}


#[dev-dependencies]
#macroquad = "0.3"
